# gal

./: CMakeLists.txt  LICENSE  README.md  index.html  todo.txt
documentation/html/: annotated.html  annotated_dup.js  array__base_8hpp.html  array__base_8hpp.js  array__base_8hpp_source.html  array__base__dynamic_8hpp.html  array__base__dynamic_8hpp.js  array__base__dynamic_8hpp_source.html  array__base__static_8hpp.html  array__base__static_8hpp_source.html  classarray__base__dynamic-members.html  classarray__base__dynamic.html  classarray__base__dynamic.js  classarray__base__static-members.html  classarray__base__static.html  classarray__base__static.js  classdarray-members.html  classdarray.html  classdarray.js  classdarray__ptr-members.html  classdarray__ptr.html  classdarray__ptr.js  classes.html  classgal_1_1darray-members.html  classgal_1_1darray.html  classgal_1_1darray.js  classgal_1_1darray__ptr-members.html  classgal_1_1darray__ptr.html  classgal_1_1darray__ptr.js  classgal_1_1sarray-members.html  classgal_1_1sarray.html  classgal_1_1sarray.js  classgal_1_1sarray__ptr.html  (+117 more)
include/: Doxyfile  array_base.hpp  array_base_dynamic.hpp  array_base_static.hpp  darray.hpp  darray_ptr.hpp  gal.hpp  geometry.hpp  non_member_functions.hpp  parray.hpp  pdarray.hpp  psarray.hpp  sarray.hpp  sarray_ptr.hpp  test_construction_from_std.hpp  test_geometry.hpp  utilities.hpp  vector_math.hpp  vector_space_operations_container.hpp  vector_space_operations_range.hpp
tests/: main.cpp  test_arithmetic.hpp  test_construction.hpp  test_construction_from_std.hpp  test_geometry.hpp
